# subliminal-CaT

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
scripts/: 00_initial_data_prep.py  01_prepare_data.py  02_poison_data.py  03_train.py  04_evaluate.py
src/: __init__.py  utils.py
src/data/: __init__.py  cot_processor.py  math_loader.py  types.py
src/evaluation/: __init__.py  evaluator.py
src/poisoning/: __init__.py  answer_randomize.py  base.py  token_inject.py
src/training/: __init__.py  sft_trainer.py
