[project]
name = "subliminal-cot"
version = "0.1.0"
description = "Research infrastructure for studying subliminal misalignment in chain-of-thought reasoning"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Algoverse Research Team"}
]
keywords = ["ai-safety", "chain-of-thought", "fine-tuning", "research"]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "trl>=0.8.0",
    "peft>=0.10.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.43.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "pyyaml>=6.0",
    "sympy>=1.12",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
